# Vina-GPU-2.1

./: .gitattributes  .gitignore  Dockerfile.runtime  NOTICE  README.md  SECURITY.md  vcpkg.json
.github/workflows/: build-linux.yml  build-windows.yml  release
AutoDock-Vina-GPU-2.1/: CMakeLists.txt
AutoDock-Vina-GPU-2.1/lib/: my_pid.cpp
QuickVina-W-GPU-2.1/: CMakeLists.txt
QuickVina-W-GPU-2.1/OpenCL/inc/: linux_fix.h
QuickVina2-GPU-2.1/: CMakeLists.txt
QuickVina2-GPU-2.1/OpenCL/inc/: commonMacros.h
QuickVina2-GPU-2.1/OpenCL/src/: linux_fix.cpp
docs/: WINDOWS_BUILD_NOTES.md
examples/smoke-test/: README.md
shims/boost/filesystem/: convenience.hpp
